--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -114,7 +114,7 @@
     padding-left: 165px;
     display: flex;
     align-items: center;
-    
+    overflow: hidden;    
 }
 
 .mainheader__item{
@@ -166,10 +166,36 @@
     height: 20px;
 }
 
+.shop__collection{
+    width: 90%;
+    justify-content: center;
+    display: none;
+    align-items: center;
+    list-style: none;
+    text-align: center;
+}
+
+.avtiveShopCollection{
+    display: grid;
+    height: 100vh;
+    background-color: red;
+    grid-template-columns: 3fr 2fr;
+    width: 900px;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+
+
+
+.shop__item{
+    list-style: none;
+}
+
 .header__icons{
     width: 23px;
     height: 23px;
-    margin: 0px 20px;
+    margin-right: 30px;
     background-color: transparent;
     font-weight: 700;
 }
@@ -181,12 +207,19 @@
     margin-right: 20px;
 }
 
-.header__icons:hover{
-    width: 23px;
-    height: 23px;
-    background-color: rgb(182, 174, 174);
-    border-radius: 50px;
+.mainheader__icons li{
+    width: 33px;
+    height: 33px;
+    background-color: transparent;
+    margin: 0px 10px;
 }
+.mainheader__icons li:hover{
+    margin: 0px 10px;
+    background-color: rgb(182, 174, 174);
+    border-radius: 66px;
+}
+
+
 
 
 
