--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -2,18 +2,26 @@
     margin-top: 40px;
     margin-left: 40px;
     width: 94%;
-    height: 70vh;
+    height: 120vh;
     margin-bottom: 50px;
 }
 
-.carousel__wrapper{
+/* .carousel{
     width: 100%;
     height: 100%;
-    display: flex;
     overflow-x: auto;
     overflow-y: hidden;
-}
+} */
 
+
+.carousel__wrapper{  
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    position: relative;
+    overflow-y: hidden;
+    overflow-x: auto;
+}
 
 .carousel__item{
     padding: 0px 7px;
