--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -6,13 +6,16 @@
     margin-bottom: 50px;
 }
 
-/* .carousel{
-    width: 100%;
-    height: 100%;
-    overflow-x: auto;
-    overflow-y: hidden;
-} */
+li{
+    list-style: none;
+}
 
+.carousel__collection h3{
+    margin-left: 1vh;
+    margin-bottom: 3.5vh;
+    font-weight: 450;
+    font-size: 3.5vh;
+}
 
 .carousel__wrapper{  
     width: 100%;
