--- a/src/Components/Footer-top/Footer-top.css
+++ b/src/Components/Footer-top/Footer-top.css
@@ -1,20 +1,71 @@
 .footer__top{
+    cursor: pointer;
     width: 94%;
-    height: 70vh;
+    height: 80vh;
     margin-left: 40px;
-    background-color: red;
     margin-bottom: 20px;
     justify-content: space-between;
     align-items: center;
 }
 
+.footer__topCollection{
+    display: flex;
+}
+
+
 .footer__topItem{
     width: 32.5%;
-    height: 50vh;
+    height: 40vh;
+    margin: 9px;
 }
 
 .footer__topItem img{
-    width: 100%;
-    height: 100%;
+    width: 62.2vh;
+    height: 40vh;
     object-fit: cover;
+    margin-top: 20px;
+}
+
+.footer__topItem img:first-child{
+    margin-right: 10px;
+    margin-left: -8px;
+}
+
+.footer__topItem h3{
+    margin-bottom: 30px;
+    margin-left: -8px;
+    font-weight: 400;
+    font-size: 17px;
+}
+
+.footer__topItem:last-child{
+    margin-right: 40px;
+}
+
+.footer__topInfo{
+    display: flex;
+    position: relative;
+    margin: 80px 0px;
+    align-items: center;
+    margin-bottom: 10px;
+    justify-content: space-around;
+}
+
+.footer__topInfo:hover{
+    overflow-y: hidden;
+    margin-left: 0px;
+}
+
+.footer__topInfo li{
+    color: rgba(31, 11, 18, 0.808);
+    line-height: 30px;
+    list-style: none;
+}
+
+.top__infoItem:hover{
+    color: #000;
+}
+
+.top__info h3{
+    font-weight: 400;
 }
