--- a/src/Components/Footer-top/Footer-top.css
+++ b/src/Components/Footer-top/Footer-top.css
@@ -1,7 +1,7 @@
 .footer__top{
     cursor: pointer;
     width: 94%;
-    height: 80vh;
+    height: 70vh;
     margin-left: 40px;
     margin-bottom: 20px;
     justify-content: space-between;
@@ -10,13 +10,7 @@
 
 .footer__topCollection{
     display: flex;
-}
-
-
-.footer__topItem{
-    width: 32.5%;
     height: 40vh;
-    margin: 9px;
 }
 
 .footer__topItem img{
@@ -31,6 +25,14 @@
     margin-left: -8px;
 }
 
+.footer__topItem{
+    width: 32.5%;
+    margin: 9px;
+    height: 40vh;
+}
+
+
+
 .footer__topItem h3{
     margin-bottom: 30px;
     margin-left: -8px;
@@ -42,23 +44,31 @@
     margin-right: 40px;
 }
 
-.footer__topInfo{
+
+
+
+.footer__info{
+    overflow: hidden;
+    width: 100%;
     display: flex;
-    position: relative;
+    position: absolute;
+    height: 60%;
     margin: 80px 0px;
     align-items: center;
     margin-bottom: 10px;
     justify-content: space-around;
 }
 
-.footer__topInfo:hover{
-    overflow-y: hidden;
-    margin-left: 0px;
+
+
+.top__info{
+    margin-top: 10px;
 }
 
+
 .footer__topInfo li{
-    color: rgba(31, 11, 18, 0.808);
-    line-height: 30px;
+    color: rgba(97, 62, 73, 0.808);
+    line-height: 6vh;
     list-style: none;
 }
 
