--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,6 +1,16 @@
-.footer{
-    background-color: black;
-    width: 100%;
-    height: 50vh;
+.footer__bar{
     position: relative;
+    width: 100%;
+    height: 40vh;
+    position: relative;
+    margin-bottom: 5vh;
+    display: flex;
+    flex-direction: column;
 }
+
+.footer__bottom{
+    height: 100%;
+    width: 100%;
+    top: 100px;
+}
+
