--- a/src/Components/maincontent/MainContent.css
+++ b/src/Components/maincontent/MainContent.css
@@ -9,11 +9,11 @@
     height: auto;
 }
 
-.maincontent{
+.maincontent-wrapper{
     margin-top: 50px;
 }
 
-.maincontent h3{
+.maincontent-wrapper h3{
     padding: 20px 40px;
     font-size: 20px;
 }
@@ -52,30 +52,29 @@
     font-size: 17;
     font-weight: 500;
     margin: 10px 35px;
-    word-spacing: 5px;
+    word-spacing: 2px;
     color: #fff;
 }
 
 .maincontent__videoInfo button{
     outline: none;
     border: none;
-    height: 20px;
+    height: 40px;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    width: 80px;
-    padding: 20px 0px;
-    margin: 20px;
-    background-color: #000;
-    color: #fff;
+    padding: 5px 25px ;
+    margin: 10px 2px 10px 40px;
+    background-color: #fff;
+    color: #000;
     border-radius: 50px;
     font-size: 17px;
     cursor: pointer;
 }
 
-.maincontent__videoInfo button:last-child{
-    margin-left: 20px;
+
+
+.video__calltoact:last-child{
+    margin: 10px 4px;
 }
 
-video__calltoact{
-    margin: 25px 0px;
-}
