--- a/src/Pages/home-page/Home.css
+++ b/src/Pages/home-page/Home.css
@@ -14,3 +14,14 @@
 .activeHeaderSale{
     display: none;
 }
+
+.popup{
+    width: 300px;
+    height: 450px;
+    background-color: red;
+    position: fixed;
+    top: calc(50vh - 250px);
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 40;
+}
