--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -14,3 +14,11 @@
     top: 100px;
 }
 
+.footer__collection{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    margin: 50px 20px 10px 50px;
+
+}
